# nyc-opendata-etl

./: .pre-commit-config.yaml  .pylintrc  README.md  load_history.py  main.py  pyproject.toml
config/: __init__.py  env.py  settings.toml
etl/: constants.py  dim_loader.py  fact_loader.py
etl/core/: bq_loader.py  column_spec.py  dim_loader.py  key_mapper.py  socrata_loader.py  utils.py
etl/dim_loaders/: agency_loader.py  complaint_loader.py  date_loader.py  location_loader.py  parking_location_loader.py  time_loader.py  vehicle_loader.py  violation_loader.py
etl/fact_loaders/: load_311.py  load_integrated_fact.py  load_parking.py
etl/specs/: dimensions.py  facts.py
